fixed arroUp position on Mobile Devices

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -274,6 +274,7 @@ input[type="checkbox"]:checked:before {
     }
   }
 
+
   input[type="submit"] {
     font-size: 16px;
   }
@@ -292,5 +293,8 @@ input[type="checkbox"]:checked:before {
     > h2 {
       padding: 0 8%;
     }
+  }
+  .upArrow {
+    right: 72px;
   }
 }
